# Cursor-Style

./: .cursorrules  BUG_REPORT.md  CMakeLists.txt  VERILOG_STYLE_GUIDE.md  setup.sh
.prompts/: README.md  check_log.sh
.prompts/sessions/: 2025-12-11_async_fifo_testing.md
.prompts/templates/: session_template.md
_cmake/: CheckExitCode.cmake  HDLHelpers.cmake  IcarusVerilog.cmake  README.md  VUnitHelpers.cmake  run_vunit.py
_cmake/vunit/: vunit_defines.svh
async_fifo/: CMakeText.txt  README.md
async_fifo/rtl/: async_fifo_asymm_concat_fwft.v  async_fifo_asymm_split_fwft.v  async_fifo_flags.v  async_fifo_flags_fwft.v  async_fifo_fwft.v
async_fifo/test/clock_rates/: async_fifo_clkrates_tb.sv
async_fifo/test/write_past/: CMakeLists.txt  async_fifo_writepast_tb.sv
async_fifo/test/write_past_fwft/: CMakeLists.txt
src/cores/: CMakeText.txt
src/cores/async_fifo/: README.md
src/cores/async_fifo/rtl/: CMakeLists.txt  async_fifo.v
src/cores/async_fifo/test/: CMakeLists.txt  TESTBENCH.md  TEST_PLAN.md
src/cores/async_fifo/test/asymm_boundary/: CMakeLists.txt  async_fifo_asymm_boundary_tb.sv
src/cores/async_fifo/test/asymm_ratios/: CMakeLists.txt  async_fifo_asymm_ratios_tb.sv
src/cores/async_fifo/test/back_to_back/: CMakeLists.txt  async_fifo_back_to_back_tb.sv
src/cores/async_fifo/test/clock_jitter/: CMakeLists.txt  async_fifo_clock_jitter_tb.sv
src/cores/async_fifo/test/clock_rates/: CMakeLists.txt  async_fifo_clkrates_tb.sv
src/cores/async_fifo/test/clock_switching/: CMakeLists.txt  async_fifo_clock_switching_tb.sv
src/cores/async_fifo/test/data_patterns/: CMakeLists.txt  async_fifo_data_patterns_tb.sv
src/cores/async_fifo/test/depth_variation/: CMakeLists.txt  async_fifo_depth_variation_tb.sv
src/cores/async_fifo/test/empty_timing/: CMakeLists.txt  async_fifo_empty_timing_tb.sv
src/cores/async_fifo/test/flag_consistency/: CMakeLists.txt  async_fifo_flag_consistency_tb.sv
src/cores/async_fifo/test/full_timing/: CMakeLists.txt  async_fifo_full_timing_tb.sv
src/cores/async_fifo/test/near_empty/: CMakeLists.txt  async_fifo_near_empty_tb.sv
src/cores/async_fifo/test/near_full/: CMakeLists.txt  async_fifo_near_full_tb.sv
src/cores/async_fifo/test/prog_full_accuracy/: CMakeLists.txt  async_fifo_prog_full_accuracy_tb.sv
src/cores/async_fifo/test/ptr_wraparound/: CMakeLists.txt  async_fifo_ptr_wraparound_tb.sv
src/cores/async_fifo/test/random_traffic/: CMakeLists.txt  async_fifo_random_traffic_tb.sv
src/cores/async_fifo/test/read_empty/: CMakeLists.txt  async_fifo_read_empty_tb.sv
src/cores/async_fifo/test/reset_sync/: CMakeLists.txt  async_fifo_reset_sync_tb.sv
src/cores/async_fifo/test/simultaneous_rdwr/: CMakeLists.txt  async_fifo_simultaneous_tb.sv
src/cores/async_fifo/test/single_entry/: CMakeLists.txt  async_fifo_single_entry_tb.sv
src/cores/async_fifo/test/width_variation/: CMakeLists.txt  async_fifo_width_variation_tb.sv
src/cores/async_fifo/test/write_past/: CMakeLists.txt  async_fifo_writepast_tb.sv
src/cores/async_fifo/test/write_past_fwft/: CMakeLists.txt  async_fifo_fwft_writepast_tb.sv
